[package]
name = "retro-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
cursive = { version = "0.21", default-features = false, features = ["crossterm-backend"] }
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]} 
serde_json = "1.0"
chrono =  "0.4"
